# lab0-c

./: CMakeLists.txt
scripts/: aspell-pws  pre-commit.hook
tests/: catch_main.cpp  test_queue.cpp
